# vst3-notation-helper

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: build-and-release.yml  build-test.yml
resource/: editor.uidesc
source/: cids.h  controller.cpp  controller.h  entry.cpp  key_signature.h  notation_editor.cpp  notation_editor.h  notation_view.cpp  notation_view.h  processor.cpp  processor.h  version.h
